Fix price alignment

--- a/plugins/woocommerce-admin/client/marketplace/components/product-card/product-card.scss
+++ b/plugins/woocommerce-admin/client/marketplace/components/product-card/product-card.scss
@@ -144,10 +144,13 @@
 				text-align: right;
 				display: inline-flex;
 				align-items: flex-end;
-				line-height: 1.5;
 			}
 			.woocommerce-marketplace__product-card__price-label {
 				margin-left: auto;
+				line-height: 1.5;
+			}
+			.woocommerce-marketplace__product-card__price-billing {
+				line-height: 1.5;
 			}
 		}
 	}
